--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-nuxt": "2.0.0",
     "eslint-plugin-vue": "7.12.1",
-    "postcss": "8.4.4",
-    "postcss-html": "^1.3.0",
+    "postcss": "8.4.5",
+    "postcss-html": "1.3.0",
     "prettier": "2.5.1",
     "stylelint": "13.13.1",
     "stylelint-config-prettier": "9.0.3",
